--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,4 @@
 @import './utility/media.css';
 @import './components/burger.css';
 @import './components/mobileMenu.css';
+@import './components/modalLogin.css';
