--- a/css/utility/variables.css
+++ b/css/utility/variables.css
@@ -6,6 +6,10 @@
   --bg-tertiary: #2F3138;       /* был #2C2E33 */
   --bg-elevated: #35373F;       /* был #2F3136 */
   
+  /* Модальки */
+  --bg-modal: #2f3138d2;
+
+
   /* Хедер и футер */
   --header-bg: #1B1C21;         /* чуть темнее основного для контраста */
   --footer-bg: #18191E;         /* ещё чуть темнее */
