--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,5 @@
 @import './components/burger.css';
 @import './components/mobileMenu.css';
 @import './components/modalLogin.css';
+@import './layouts/guarantees.css';
+@import './components/card.css';
