feat: add image gallery for account pages
- Add modal gallery with blur effect for account images
- Fix visual bugs in catalog cards
- Improve modal windows with backdrop-filter

--- a/css/components/account.css
+++ b/css/components/account.css
@@ -13,6 +13,7 @@
   /* max-width: 80%;
   max-height: 80%; */
   padding: var(--space-6);
+  cursor: pointer;
 }
 
 .account__title {
@@ -27,6 +28,8 @@
   font-size: var(--text-base);
   padding-top: var(--space-4);
 }
+
+
 
 .account__price {
   color: var(--text-price);
@@ -49,3 +52,5 @@
 .account__btn:hover{
   background-color: var(--hover-btn);
 }
+
+
