--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,5 @@
 @import './components/modalLogin.css';
 @import './layouts/guarantees.css';
 @import './components/card.css';
+@import './layouts/aboutUs.css';
+@import './components/gallery.css';
