--- a/css/components/modalLogin.css
+++ b/css/components/modalLogin.css
@@ -77,6 +77,7 @@
   width: 100vw;
   height: 100vh;
   background-color: var(--bg-modal);
+  backdrop-filter: blur(10px);
 }
 
 .modal__input-registration {
