--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,4 @@
 @import './components/card.css';
 @import './layouts/aboutUs.css';
 @import './components/gallery.css';
+@import './components/filter.css';
