feat: add filter min/max inputs

--- a/css/components/filter.css
+++ b/css/components/filter.css
@@ -67,3 +67,48 @@
     background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 24 24' fill='none' stroke='%23999' stroke-width='2'><line x1='18' y1='6' x2='6' y2='18'/><line x1='6' y1='6' x2='18' y2='18'/></svg>");
     cursor: pointer;
 }
+
+
+.filter__price{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+
+}
+
+.filter__price-inputs{
+
+display: flex;
+flex-direction: column;
+text-align: center;
+}
+
+.filter__price-min{
+    border: 1px solid var(--border-dark);
+    margin-bottom: 10px;
+    border-radius: 10px;
+    text-align: center;
+    height: 30px;
+}
+
+.filter__price-max{
+    border: 1px solid var(--border-dark);
+    border-radius: 10px;
+    text-align: center;
+    height: 30px;
+}
+
+
+.filter__price-apply{
+    border: 1px solid var(--border-dark);
+    border-radius: 6px;
+    padding: 10px;
+    transition: background-color .3s ease;
+}
+
+
+.filter__price-apply:hover{
+    background-color: var(--hover-btn);
+}
